lagere map gedöns aus

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 name: Your New Jekyll Site
 markdown: redcarpet
 pygments: true
+
+map_js: |
+  L.tileLayer('http://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png', {
+    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
+  maxZoom: 18
+  }).addTo(map);
