--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ name: Your New Jekyll Site
 markdown: redcarpet
 pygments: true
 
+url: "https://www.noname-ev.de"
+
 treff_lat: 49.41765
 treff_lon: 8.66831
 
