--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,6 @@ treff_lon: 8.66831
 map_js: |
   L.tileLayer('http://{s}.tile.openstreetmap.de/tiles/osmde/{z}/{x}/{y}.png', {
     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
-  maxZoom: 18
+  maxZoom: 18,
+  detectRetina: true
   }).addTo(map);
