add basic English intro

--- a/www/_config.yml
+++ b/www/_config.yml
@@ -13,3 +13,11 @@ map_js: |
   maxZoom: 18,
   detectRetina: true
   }).addTo(map);
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      lang: "de"
