--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: go
 
 go:
-    - 1.5
-    - 1.3.3
+    - 1.11 # Debian Testing
 
 install:
     - go get -v github.com/nnev/website/termine
@@ -10,6 +9,10 @@ install:
     - go get -v github.com/nnev/website/yarpnarp
 
 script:
+    - go vet ./...
+    - go build -o termine_testbuild -v github.com/nnev/website/termine
+    - go build -o c14h_testbuild -v github.com/nnev/website/c14h
+    - go build -o yarpnarp_testbuild -v github.com/nnev/website/yarpnarp
     - go test ./...
 
 notifications:
