--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,14 @@ language: go
 go:
     - 1.11 # Debian Testing
 
+services:
+    - docker
+
 install:
     - go get -v github.com/nnev/website/termine
     - go get -v github.com/nnev/website/c14h
     - go get -v github.com/nnev/website/yarpnarp
+    - make build
 
 script:
     - go vet ./...
@@ -14,6 +18,7 @@ script:
     - go build -o c14h_testbuild -v github.com/nnev/website/c14h
     - go build -o yarpnarp_testbuild -v github.com/nnev/website/yarpnarp
     - go test ./...
+    - make travis-run
 
 notifications:
     email: false
